[n] Added resources and controller for FAQs api.
