# web/routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Api\BlogApiController;
+use App\Http\Controllers\Api\FaqsApiController;
 use App\Http\Controllers\Api\FormApiController;
 use App\Http\Controllers\Api\MenuApiController;
 use App\Http\Controllers\Api\PartnerApiController;
@@ -36,4 +37,5 @@ Route::apiResource('settings', SettingApiController::class)->only(['index']);
 Route::apiResource('services', ServiceApiController::class)->only(['index']);
 Route::apiResource('blog', BlogApiController::class)->only(['index']);
 Route::apiResource('form', FormApiController::class)->only(['store']);
+Route::apiResource('faqs', FaqsApiController::class)->only(['index']);
 
